[package]
name = "cc-server-kit"
version = "0.3.5"
edition = "2024"

[features]
default = ["http3", "cors", "acme", "oapi", "cc-utils", "otel", "force-https"]
http3 = ["salvo/quinn"]
acme = ["salvo/acme"]
cors = ["salvo/cors"]
websocket = ["salvo/websocket"]
otel = ["salvo/otel", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
oapi = ["salvo/oapi"]
proxy = ["salvo/proxy", "reqwest/stream"]
reqwest-msgpack = ["dep:reqwest"]
reqwest-http3 = ["reqwest/http3"]
cc-auth = ["dep:cc-auth"]
cc-utils = []
log-without-filtering = []
flash = ["salvo/flash"]
force-https = ["salvo/force-https"]
jwt-auth = ["salvo/jwt-auth"]
basic-auth = ["salvo/basic-auth"]
cache = ["salvo/cache"]
caching-headers = ["salvo/caching-headers"]
catch-panic = ["salvo/catch-panic"]
compression = ["salvo/compression"]
concurrency-limiter = ["salvo/concurrency-limiter"]
csrf = ["salvo/csrf"]
request-id = ["salvo/request-id"]
session = ["salvo/session"]
size-limiter = ["salvo/size-limiter"]
sse = ["salvo/sse"]
test = [
  "salvo/test",
  "dep:bytes",
  "dep:encoding_rs",
  "dep:http-body-util",
  "dep:brotli",
  "dep:flate2",
  "dep:mime",
  "dep:zstd",
  "dep:serde_json",
  "dep:rmp-serde",
]
timeout = ["salvo/timeout"]
trailing-slash = ["salvo/trailing-slash"]
tower-compat = ["salvo/tower-compat"]

[dependencies]
brotli = { optional = true, version = "7", default-features = false, features = ["default"] }
bytes = { optional = true, version = "1" }
cc-auth = { optional = true, git = "https://github.com/markcda/cc-auth.git", tag = "0.3.1" }
cc-utils = { git = "https://github.com/markcda/cc-utils.git", tag = "0.5.7" }
encoding_rs = { optional = true, version = "0.8" }
flate2 = { optional = true, version = "1", default-features = false, features = ["default"] }
http-body-util = { optional = true, version = "0.1" }
mime = { optional = true, version = "0.3" }
notify = "6.1"
opentelemetry = { optional = true, version = "0.27" }
opentelemetry-otlp = { optional = true, version = "0.27", features = ["tonic"] }
opentelemetry_sdk = { optional = true, version = "0.27", features = ["rt-tokio"] }
reqwest = { optional = true, git = "https://github.com/markcda/reqwest.git", branch = "msgpack-support", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = { optional = true, version = "1.3" }
salvo = { version = "0.76.2", features = ["affix-state", "compression", "rustls", "cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = { optional = true, version = "1" }
serde_yaml = "0.9"
tokio = { version = "1", features = ["signal"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = { optional = true, version = "0.28" }
tracing-subscriber = "0.3"
zstd = { optional = true, version = "0.13", default-features = false, features = ["default"] }

[package.metadata.cargo-all-features]
denylist = ["cc-auth", "flash", "cache", "compression", "csrf", "session", "jwt-auth", "basic-auth", "caching-headers", "catch-panic", "concurrency-limiter", "request-id", "size-limiter", "sse", "timeout", "trailing-slash", "tower-compat", "reqwest-msgpack", "reqwest-http3", "websocket", "proxy"]
